// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component Mini badge error 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#ff190c",
        "borderColor": "#fff",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "height": 8,
        "justifyContent": "center",
        "minWidth": 8,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
      }
    }
  />
</View>
`;

exports[`Badge Component Mini badge primary 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "height": 8,
        "justifyContent": "center",
        "minWidth": 8,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
      }
    }
  />
</View>
`;

exports[`Badge Component Mini badge success 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#52c41a",
        "borderColor": "#fff",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "height": 8,
        "justifyContent": "center",
        "minWidth": 8,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
      }
    }
  />
</View>
`;

exports[`Badge Component Mini badge warning 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#faad14",
        "borderColor": "#fff",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "height": 8,
        "justifyContent": "center",
        "minWidth": 8,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
      }
    }
  />
</View>
`;

exports[`Badge Component should allow badge style 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "pink",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      10
    </Text>
  </View>
</View>
`;

exports[`Badge Component should allow custom component 1`] = `
<View
  style={Object {}}
>
  <TouchableWithoutFeedback
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      10
    </Text>
  </TouchableWithoutFeedback>
</View>
`;

exports[`Badge Component should apply container style in the badge 1`] = `
<View
  style={
    Object {
      "backgroundColor": "orange",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      10
    </Text>
  </View>
</View>
`;

exports[`Badge Component should have a touchable when onPress is passed in 1`] = `
<View
  style={Object {}}
>
  <ForwardRef
    onPress={[MockFunction]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      10
    </Text>
  </ForwardRef>
</View>
`;

exports[`Badge Component should pass value props should still work 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      foo
    </Text>
  </View>
</View>
`;

exports[`Badge Component should render if element included 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      title="foo"
    />
  </View>
</View>
`;

exports[`Badge Component should render without issue 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      10
    </Text>
  </View>
</View>
`;
